	attempting to create indexes on string-valued columns (first
	reported by Elaheh Pourabbas <elaheh.pourabbas at iasi.cnr.it>)
	* src/column.cpp:4761 add 'if (idx != tmp)' to prevent current
	index being deleted
	* tests/Makefile.am: change check-text to test the functions for
	building indexes in bulk (which how Elaheh discovered the problem
	with index building procedure)

2009-12-22 John Wu <John.Wu at ACM.org>
	* examples/ardea.cpp: assign "," as the default delimiter for
	readCSV
	* src/util.cpp: change getString to remove the (assumed) space
	delimiter

2009-12-21 John Wu <John.Wu at ACM.org>
	* src/ixfuge.cpp, src/index.cpp, src/array_t.cpp,
	src/bitvector.cpp: change conditional compilation statement #if
	defined(_DEBUG) to be #if  DEBUG+0 > 1 || _DEBUG+0 > 1, minor
	updates to address errors in the logging statements
	* src/fileManager.cpp: replace the statement that reinterpret
	m_begin as float and double with casts to uint32_t and uint64_t,
	PGI compiler appears to be doing some extra checking and does not
	like the recast values

2009-12-18 John Wu <John.Wu at ACM.org>
	* src/configure.ac: add AC_PACKAGE_URL
	* src/util.cpp: print FastBit version, mailing list address and
	web url at the beginning of log file
	* src/tafel.cpp:551-555 update the check on the availability of
	strtof (default to strtod)
	* src/ibin.h: using statement can only refer to members of direct
	base class
	* src/fileManager.cpp:1906 neglected to assign the value of
	cp.m_end
	* example/ibis.cpp:3586 merge the if test with the test in LOGGER
	statment to avoid ambuguious if statement (warning from gcc)
	* INSTALL: update known problem (9)

2009-12-17 John Wu <John.Wu at ACM.org>
	* src/ibin.h, src/irelic.h: add using statements to quiet
	complains about partially overwritten functions
	* src/part.cpp: the function quickTest produced select clauses
	without expected separators

2009-12-16 John Wu <John.Wu at ACM.org>
	* src/whereParser.yy: add rules to accept "name != 'string'" at